--- a/src/main/java/ui/ConnectionFileForm.form
+++ b/src/main/java/ui/ConnectionFileForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ui.ConnectionFileForm">
-  <grid id="27dc6" binding="connectionFieldPanel" layout-manager="GridLayoutManager" row-count="5" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="connectionFieldPanel" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="20" y="20" width="530" height="400"/>
@@ -55,7 +55,7 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="words" key="user"/>
+          <text resource-bundle="words" key="path"/>
         </properties>
       </component>
       <component id="58b12" class="javax.swing.JLabel">
@@ -63,7 +63,23 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="words" key="url"/>
+          <text resource-bundle="words" key="user.tag"/>
+        </properties>
+      </component>
+      <component id="7f480" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text resource-bundle="words" key="url.tag"/>
+        </properties>
+      </component>
+      <component id="a9728" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text resource-bundle="words" key="password.tag"/>
         </properties>
       </component>
       <component id="14292" class="javax.swing.JTextField" binding="nameField">
@@ -74,7 +90,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="cb8e0" class="javax.swing.JTextField" binding="userField">
+      <component id="cb8e0" class="javax.swing.JTextField" binding="filepathField">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -82,7 +98,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="519fd" class="javax.swing.JTextField" binding="urlField">
+      <component id="519fd" class="javax.swing.JTextField" binding="userTagField">
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -90,18 +106,25 @@
         </constraints>
         <properties/>
       </component>
-      <component id="f13e8" class="javax.swing.JButton" binding="changeToThisDatabaseButton" default-binding="true">
+      <component id="7724e" class="javax.swing.JTextField" binding="urlTagField">
         <constraints>
-          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
         </constraints>
-        <properties>
-          <background color="-1315861"/>
-          <text resource-bundle="words" key="change.database"/>
-        </properties>
+        <properties/>
+      </component>
+      <component id="9dde8" class="javax.swing.JTextField" binding="passwordTagField">
+        <constraints>
+          <grid row="5" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
       </component>
       <scrollpane id="c77de">
         <constraints>
-          <grid row="0" column="0" row-span="5" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="0" column="0" row-span="6" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="80" height="-1"/>
           </grid>
         </constraints>
