--- a/src/main/java/ui/DatabaseForm.form
+++ b/src/main/java/ui/DatabaseForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ui.DatabaseForm">
-  <grid id="27dc6" binding="databasePanel" layout-manager="GridLayoutManager" row-count="5" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="databasePanel" layout-manager="GridLayoutManager" row-count="7" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="20" y="20" width="530" height="400"/>
@@ -120,6 +120,52 @@
           </component>
         </children>
       </scrollpane>
+      <scrollpane id="c5d1a">
+        <constraints>
+          <grid row="5" column="0" row-span="2" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="80" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="60b06" class="javax.swing.JList" binding="passwordList">
+            <constraints/>
+            <properties>
+              <background color="-12500671"/>
+              <foreground color="-1"/>
+              <selectionBackground color="-9539213"/>
+              <selectionForeground color="-1"/>
+              <valueIsAdjusting value="false"/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
+      <component id="2ff12" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text resource-bundle="words" key="password"/>
+        </properties>
+      </component>
+      <component id="8ab5c" class="javax.swing.JTextField" binding="passwordField">
+        <constraints>
+          <grid row="5" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="1ef35" class="javax.swing.JButton" binding="savePasswordButton">
+        <constraints>
+          <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-1315861"/>
+          <text resource-bundle="words" key="save.password"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
