--- a/src/main/java/ui/ConnectionFileForm.form
+++ b/src/main/java/ui/ConnectionFileForm.form
@@ -3,12 +3,14 @@
   <grid id="27dc6" binding="connectionFieldPanel" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="530" height="400"/>
+      <xy x="20" y="20" width="600" height="400"/>
     </constraints>
     <properties>
       <background color="-3158065"/>
       <foreground color="-12500671"/>
       <inheritsPopupMenu value="false"/>
+      <minimumSize width="600" height="400"/>
+      <preferredSize width="600" height="400"/>
     </properties>
     <border type="bevel-lowered" title-resource-bundle="words" title-key="connection.file">
       <font name="Verdana" size="16" style="1"/>
