--- a/src/main/java/ui/DatabaseForm.form
+++ b/src/main/java/ui/DatabaseForm.form
@@ -3,12 +3,14 @@
   <grid id="27dc6" binding="databasePanel" layout-manager="GridLayoutManager" row-count="7" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="530" height="400"/>
+      <xy x="20" y="20" width="600" height="400"/>
     </constraints>
     <properties>
       <background color="-3158065"/>
       <foreground color="-12500671"/>
       <inheritsPopupMenu value="false"/>
+      <minimumSize width="600" height="400"/>
+      <preferredSize width="600" height="400"/>
     </properties>
     <border type="bevel-lowered" title-resource-bundle="words" title-key="database">
       <font name="Verdana" size="16" style="1"/>
@@ -102,7 +104,7 @@
       <scrollpane id="c77de">
         <constraints>
           <grid row="0" column="0" row-span="5" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="80" height="-1"/>
+            <preferred-size width="202" height="128"/>
           </grid>
         </constraints>
         <properties/>
@@ -123,7 +125,7 @@
       <scrollpane id="c5d1a">
         <constraints>
           <grid row="5" column="0" row-span="2" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="80" height="-1"/>
+            <preferred-size width="202" height="128"/>
           </grid>
         </constraints>
         <properties/>
