--- a/src/main/java/ui/ConnectionFileForm.form
+++ b/src/main/java/ui/ConnectionFileForm.form
@@ -28,7 +28,7 @@
       </component>
       <component id="913db" class="javax.swing.JButton" binding="saveButton" default-binding="true">
         <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-1315861"/>
@@ -138,6 +138,8 @@
             <properties>
               <background color="-12500671"/>
               <foreground color="-1"/>
+              <minimumSize width="50" height="50"/>
+              <preferredSize width="50" height="50"/>
               <selectionBackground color="-9539213"/>
               <selectionForeground color="-1"/>
               <valueIsAdjusting value="false"/>
