--- a/src/main/java/ui/ConnectionFileForm.form
+++ b/src/main/java/ui/ConnectionFileForm.form
@@ -6,15 +6,15 @@
       <xy x="20" y="20" width="600" height="400"/>
     </constraints>
     <properties>
-      <background color="-3158065"/>
+      <background color="-12696756"/>
       <foreground color="-12500671"/>
       <inheritsPopupMenu value="false"/>
       <minimumSize width="600" height="400"/>
       <preferredSize width="600" height="400"/>
     </properties>
-    <border type="bevel-lowered" title-resource-bundle="words" title-key="connection.file">
+    <border type="bevel-raised" title-resource-bundle="words" title-key="connection.file">
       <font name="Verdana" size="16" style="1"/>
-      <title-color color="-16777216"/>
+      <title-color color="-1"/>
     </border>
     <children>
       <component id="c2ded" class="javax.swing.JButton" binding="addButton">
@@ -22,7 +22,9 @@
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1315861"/>
+          <background color="-13215616"/>
+          <borderPainted value="false"/>
+          <foreground color="-1"/>
           <text resource-bundle="words" key="add"/>
         </properties>
       </component>
@@ -31,7 +33,9 @@
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1315861"/>
+          <background color="-13215616"/>
+          <borderPainted value="false"/>
+          <foreground color="-1"/>
           <text resource-bundle="words" key="save"/>
         </properties>
       </component>
@@ -40,7 +44,9 @@
           <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1315861"/>
+          <background color="-13215616"/>
+          <borderPainted value="false"/>
+          <foreground color="-1"/>
           <text resource-bundle="words" key="delete"/>
         </properties>
       </component>
@@ -49,6 +55,8 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-12696756"/>
+          <foreground color="-1"/>
           <text resource-bundle="words" key="name"/>
         </properties>
       </component>
@@ -57,6 +65,8 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-12696756"/>
+          <foreground color="-1"/>
           <text resource-bundle="words" key="path"/>
         </properties>
       </component>
@@ -65,6 +75,8 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-12696756"/>
+          <foreground color="-1"/>
           <text resource-bundle="words" key="user.tag"/>
         </properties>
       </component>
@@ -73,6 +85,8 @@
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-12696756"/>
+          <foreground color="-1"/>
           <text resource-bundle="words" key="url.tag"/>
         </properties>
       </component>
@@ -81,6 +95,8 @@
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-12696756"/>
+          <foreground color="-1"/>
           <text resource-bundle="words" key="password.tag"/>
         </properties>
       </component>
@@ -90,7 +106,11 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-12500671"/>
+          <caretColor color="-1"/>
+          <foreground color="-1"/>
+        </properties>
       </component>
       <component id="cb8e0" class="javax.swing.JTextField" binding="filepathField">
         <constraints>
@@ -98,7 +118,11 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-12500671"/>
+          <caretColor color="-1"/>
+          <foreground color="-1"/>
+        </properties>
       </component>
       <component id="519fd" class="javax.swing.JTextField" binding="userTagField">
         <constraints>
@@ -106,7 +130,11 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-12500671"/>
+          <caretColor color="-1"/>
+          <foreground color="-1"/>
+        </properties>
       </component>
       <component id="7724e" class="javax.swing.JTextField" binding="urlTagField">
         <constraints>
@@ -114,7 +142,11 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-12500671"/>
+          <caretColor color="-1"/>
+          <foreground color="-1"/>
+        </properties>
       </component>
       <component id="9dde8" class="javax.swing.JTextField" binding="passwordTagField">
         <constraints>
@@ -122,7 +154,11 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-12500671"/>
+          <caretColor color="-1"/>
+          <foreground color="-1"/>
+        </properties>
       </component>
       <scrollpane id="c77de">
         <constraints>
@@ -140,7 +176,7 @@
               <foreground color="-1"/>
               <minimumSize width="50" height="50"/>
               <preferredSize width="50" height="50"/>
-              <selectionBackground color="-9539213"/>
+              <selectionBackground color="-13215616"/>
               <selectionForeground color="-1"/>
               <valueIsAdjusting value="false"/>
             </properties>
