--- a/src/main/java/ui/UserForm.form
+++ b/src/main/java/ui/UserForm.form
@@ -6,14 +6,14 @@
       <xy x="20" y="20" width="600" height="400"/>
     </constraints>
     <properties>
-      <background color="-3158065"/>
+      <background color="-12696756"/>
       <foreground color="-12500671"/>
       <maximumSize width="600" height="400"/>
       <minimumSize width="600" height="400"/>
     </properties>
-    <border type="bevel-lowered" title="User">
+    <border type="bevel-raised" title="User">
       <font name="Verdana" size="16" style="1"/>
-      <title-color color="-16777216"/>
+      <title-color color="-1"/>
     </border>
     <children>
       <scrollpane id="359d5">
@@ -30,7 +30,12 @@
         <children>
           <component id="5f82d" class="javax.swing.JList" binding="userList">
             <constraints/>
-            <properties/>
+            <properties>
+              <background color="-12500671"/>
+              <foreground color="-1"/>
+              <selectionBackground color="-13215616"/>
+              <selectionForeground color="-1"/>
+            </properties>
           </component>
         </children>
       </scrollpane>
@@ -39,7 +44,9 @@
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1315861"/>
+          <background color="-13215616"/>
+          <borderPainted value="false"/>
+          <foreground color="-1"/>
           <text resource-bundle="words" key="save"/>
         </properties>
       </component>
@@ -48,7 +55,9 @@
           <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1315861"/>
+          <background color="-13215616"/>
+          <borderPainted value="false"/>
+          <foreground color="-1"/>
           <text resource-bundle="words" key="delete"/>
         </properties>
       </component>
@@ -57,7 +66,11 @@
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1315861"/>
+          <background color="-13215616"/>
+          <borderPainted value="false"/>
+          <foreground color="-1"/>
+          <hideActionText value="false"/>
+          <opaque value="true"/>
           <text resource-bundle="words" key="add"/>
         </properties>
       </component>
@@ -66,6 +79,7 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-1"/>
           <text resource-bundle="words" key="login"/>
         </properties>
       </component>
@@ -75,13 +89,18 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-12500671"/>
+          <caretColor color="-1"/>
+          <foreground color="-1"/>
+        </properties>
       </component>
       <component id="1d4e9" class="javax.swing.JLabel">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-1"/>
           <text resource-bundle="words" key="password"/>
         </properties>
       </component>
@@ -91,13 +110,18 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-12500671"/>
+          <caretColor color="-1"/>
+          <foreground color="-1"/>
+        </properties>
       </component>
       <component id="d5026" class="javax.swing.JLabel">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-1"/>
           <text resource-bundle="words" key="id"/>
         </properties>
       </component>
@@ -107,13 +131,18 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-12500671"/>
+          <caretColor color="-1"/>
+          <foreground color="-1"/>
+        </properties>
       </component>
       <component id="9bce3" class="javax.swing.JLabel">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-1"/>
           <text resource-bundle="words" key="description"/>
         </properties>
       </component>
@@ -123,14 +152,21 @@
             <preferred-size width="150" height="50"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-12500671"/>
+          <caretColor color="-1"/>
+          <foreground color="-1"/>
+          <margin top="0" left="0" bottom="0" right="0"/>
+        </properties>
       </component>
       <component id="33975" class="javax.swing.JButton" binding="psocButton">
         <constraints>
           <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1315861"/>
+          <background color="-13215616"/>
+          <borderPainted value="false"/>
+          <foreground color="-1"/>
           <text resource-bundle="words" key="psoc"/>
         </properties>
       </component>
@@ -139,7 +175,9 @@
           <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1315861"/>
+          <background color="-13215616"/>
+          <borderPainted value="false"/>
+          <foreground color="-1"/>
           <text resource-bundle="words" key="bsoc"/>
         </properties>
       </component>
@@ -148,7 +186,9 @@
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1315861"/>
+          <background color="-13215616"/>
+          <borderPainted value="false"/>
+          <foreground color="-1"/>
           <text resource-bundle="words" key="local"/>
         </properties>
       </component>
@@ -157,7 +197,9 @@
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1315861"/>
+          <background color="-13215616"/>
+          <borderPainted value="false"/>
+          <foreground color="-1"/>
           <text resource-bundle="words" key="hsoc"/>
         </properties>
       </component>
