improve connection file form layout

--- a/src/main/java/ui/ConnectionFileForm.form
+++ b/src/main/java/ui/ConnectionFileForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ui.ConnectionFileForm">
-  <grid id="27dc6" binding="connectionFieldPanel" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="connectionFieldPanel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="20" y="20" width="600" height="400"/>
@@ -17,160 +17,58 @@
       <title-color color="-1"/>
     </border>
     <children>
-      <component id="c2ded" class="javax.swing.JButton" binding="addButton">
+      <grid id="54246" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-13215616"/>
-          <borderPainted value="false"/>
-          <foreground color="-1"/>
-          <text resource-bundle="words" key="add"/>
-        </properties>
-      </component>
-      <component id="913db" class="javax.swing.JButton" binding="saveButton" default-binding="true">
-        <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-13215616"/>
-          <borderPainted value="false"/>
-          <foreground color="-1"/>
-          <text resource-bundle="words" key="save"/>
-        </properties>
-      </component>
-      <component id="1f5ae" class="javax.swing.JButton" binding="deleteButton" default-binding="true">
-        <constraints>
-          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-13215616"/>
-          <borderPainted value="false"/>
-          <foreground color="-1"/>
-          <text resource-bundle="words" key="delete"/>
-        </properties>
-      </component>
-      <component id="d83f7" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-12696756"/>
-          <foreground color="-1"/>
-          <text resource-bundle="words" key="name"/>
+          <foreground color="-12696756"/>
         </properties>
-      </component>
-      <component id="2c5b9" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-12696756"/>
-          <foreground color="-1"/>
-          <text resource-bundle="words" key="path"/>
-        </properties>
-      </component>
-      <component id="58b12" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-12696756"/>
-          <foreground color="-1"/>
-          <text resource-bundle="words" key="user.tag"/>
-        </properties>
-      </component>
-      <component id="7f480" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-12696756"/>
-          <foreground color="-1"/>
-          <text resource-bundle="words" key="url.tag"/>
-        </properties>
-      </component>
-      <component id="a9728" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-12696756"/>
-          <foreground color="-1"/>
-          <text resource-bundle="words" key="password.tag"/>
-        </properties>
-      </component>
-      <component id="14292" class="javax.swing.JTextField" binding="nameField">
-        <constraints>
-          <grid row="1" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <background color="-12500671"/>
-          <caretColor color="-1"/>
-          <foreground color="-1"/>
-        </properties>
-      </component>
-      <component id="cb8e0" class="javax.swing.JTextField" binding="filepathField">
-        <constraints>
-          <grid row="2" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <background color="-12500671"/>
-          <caretColor color="-1"/>
-          <foreground color="-1"/>
-        </properties>
-      </component>
-      <component id="519fd" class="javax.swing.JTextField" binding="userTagField">
-        <constraints>
-          <grid row="3" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <background color="-12500671"/>
-          <caretColor color="-1"/>
-          <foreground color="-1"/>
-        </properties>
-      </component>
-      <component id="7724e" class="javax.swing.JTextField" binding="urlTagField">
-        <constraints>
-          <grid row="4" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <background color="-12500671"/>
-          <caretColor color="-1"/>
-          <foreground color="-1"/>
-        </properties>
-      </component>
-      <component id="9dde8" class="javax.swing.JTextField" binding="passwordTagField">
-        <constraints>
-          <grid row="5" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <background color="-12500671"/>
-          <caretColor color="-1"/>
-          <foreground color="-1"/>
-        </properties>
-      </component>
-      <scrollpane id="c77de">
-        <constraints>
-          <grid row="0" column="0" row-span="6" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="80" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
         <border type="none"/>
         <children>
+          <grid id="596e3" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-12696756"/>
+              <foreground color="-1"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="c2ded" class="javax.swing.JButton" binding="addButton">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-13215616"/>
+                  <borderPainted value="false"/>
+                  <foreground color="-1"/>
+                  <icon value="images/add.png"/>
+                  <text resource-bundle="words" key="add"/>
+                </properties>
+              </component>
+              <component id="1f5ae" class="javax.swing.JButton" binding="deleteButton" default-binding="true">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-13215616"/>
+                  <borderPainted value="false"/>
+                  <foreground color="-1"/>
+                  <icon value="images/clear.png"/>
+                  <text resource-bundle="words" key="delete"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
           <component id="91968" class="javax.swing.JList" binding="connectionFileList">
-            <constraints/>
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
             <properties>
               <background color="-12500671"/>
               <foreground color="-1"/>
@@ -182,7 +80,155 @@
             </properties>
           </component>
         </children>
-      </scrollpane>
+      </grid>
+      <grid id="bc616" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-12696756"/>
+          <foreground color="-12696756"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="d83f7" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-12696756"/>
+              <foreground color="-1"/>
+              <text resource-bundle="words" key="name"/>
+            </properties>
+          </component>
+          <component id="2c5b9" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-12696756"/>
+              <foreground color="-1"/>
+              <text resource-bundle="words" key="path"/>
+            </properties>
+          </component>
+          <component id="14292" class="javax.swing.JTextField" binding="nameField">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="28"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-12500671"/>
+              <caretColor color="-1"/>
+              <foreground color="-1"/>
+            </properties>
+          </component>
+          <component id="cb8e0" class="javax.swing.JTextField" binding="filepathField">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="28"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-12500671"/>
+              <caretColor color="-1"/>
+              <foreground color="-1"/>
+            </properties>
+          </component>
+          <component id="58b12" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-12696756"/>
+              <foreground color="-1"/>
+              <text resource-bundle="words" key="user.tag"/>
+            </properties>
+          </component>
+          <component id="519fd" class="javax.swing.JTextField" binding="userTagField">
+            <constraints>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="28"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-12500671"/>
+              <caretColor color="-1"/>
+              <foreground color="-1"/>
+            </properties>
+          </component>
+          <component id="7f480" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-12696756"/>
+              <foreground color="-1"/>
+              <text resource-bundle="words" key="url.tag"/>
+            </properties>
+          </component>
+          <component id="7724e" class="javax.swing.JTextField" binding="urlTagField">
+            <constraints>
+              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="28"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-12500671"/>
+              <caretColor color="-1"/>
+              <foreground color="-1"/>
+            </properties>
+          </component>
+          <component id="a9728" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-12696756"/>
+              <foreground color="-1"/>
+              <text resource-bundle="words" key="password.tag"/>
+            </properties>
+          </component>
+          <component id="9dde8" class="javax.swing.JTextField" binding="passwordTagField">
+            <constraints>
+              <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="28"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-12500671"/>
+              <caretColor color="-1"/>
+              <foreground color="-1"/>
+            </properties>
+          </component>
+          <component id="913db" class="javax.swing.JButton" binding="saveButton" default-binding="true">
+            <constraints>
+              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13215616"/>
+              <borderPainted value="false"/>
+              <enabled value="false"/>
+              <foreground color="-1"/>
+              <icon value="images/save.png"/>
+              <text resource-bundle="words" key="save"/>
+            </properties>
+          </component>
+          <grid id="30e5b" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-12696756"/>
+              <foreground color="-12696756"/>
+            </properties>
+            <border type="none"/>
+            <children/>
+          </grid>
+        </children>
+      </grid>
     </children>
   </grid>
 </form>
