--- a/src/main/java/ui/UserForm.form
+++ b/src/main/java/ui/UserForm.form
@@ -3,13 +3,14 @@
   <grid id="27dc6" binding="userFieldPanel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="860" height="400"/>
+      <xy x="20" y="20" width="1280" height="600"/>
     </constraints>
     <properties>
       <background color="-12696756"/>
+      <font/>
       <foreground color="-12500671"/>
-      <maximumSize width="860" height="400"/>
-      <minimumSize width="860" height="400"/>
+      <maximumSize width="1280" height="600"/>
+      <minimumSize width="1280" height="600"/>
     </properties>
     <border type="bevel-raised" title="User">
       <font name="Verdana" size="16" style="1"/>
